--- a/style/acc_mobile.css
+++ b/style/acc_mobile.css
@@ -19,7 +19,6 @@
     header {
         background: black;
         color: white;
-        width: inherit;
         height: 20rem;
         display: table-cell;
         vertical-align: middle;
@@ -45,6 +44,7 @@
     article {
         margin-top: 5rem;
         margin-bottom: 5rem;
+        padding: 0 3rem;
     }
 
     form * {
@@ -94,6 +94,58 @@
 
         transition-property: color, background, border, box-shadow;
         transition-duration: 0.42s;
+    }
+
+    p.dscrpt, a {
+        font-size: 0.8rem;
+    }
+
+    label[for = 'tos'] img {
+        display: inline;
+        background: url('../img/uncheck.png') no-repeat;
+        background-size: 0.8rem 0.8rem;
+        width: 0.8rem;
+        height: 0.8rem;
+        border: none;
+        margin: 0;
+        margin-right: 0.5rem;
+    
+        transition-property: background;
+        transition-duration: 0.3s;
+    }
+    
+    input#tos:checked + div#dscrpt label[for = 'tos'] img {
+        display: inline;
+        background: url('../img/check.png') no-repeat;
+        background-size: 0.8rem 0.8rem;
+        width: 0.8rem;
+        height: 0.8rem;
+        border: none;
+        margin: 0;
+        margin-right: 0.5rem;
+    }
+
+    p.ttl, p.txt, p.sttl, li.txt {
+        line-height: 2rem !important;
+    }
+    
+    p.ttl {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin: 1.5rem 0;
+    }
+    
+    p.sttl {
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+    
+    p.txt, li.txt {
+        font-size: 0.95rem;
+    }
+    
+    #btm {
+        padding-bottom: 3rem !important;
     }
 
     input[type = 'text']:focus, input[type = 'password']:focus, input[type = 'email']:focus {
