--- a/style/acc_mobile.css
+++ b/style/acc_mobile.css
@@ -100,7 +100,7 @@
         font-size: 0.8rem;
     }
 
-    label[for = 'tos'] img {
+    label[for] img {
         display: inline;
         background: url('../img/uncheck.png') no-repeat;
         background-size: 0.8rem 0.8rem;
@@ -114,7 +114,7 @@
         transition-duration: 0.3s;
     }
     
-    input#tos:checked + div#dscrpt label[for = 'tos'] img {
+    input[type = 'checkbox']:checked + div.dscrpt label[for] img {
         display: inline;
         background: url('../img/check.png') no-repeat;
         background-size: 0.8rem 0.8rem;
