--- a/style/acc_dark.css
+++ b/style/acc_dark.css
@@ -18,7 +18,7 @@
         box-shadow: 0rem 0rem 2rem 0rem #161616;
     }
 
-    p.dscrpt, a {
+    p.dscrpt, p.sml, a {
         color: white;
     }
 
