--- a/style/index.css
+++ b/style/index.css
@@ -2,8 +2,117 @@
 html, body, article {
     width: 100%;
     height: 100%;
+    margin: 0;
 }
 
 article {
-    overflow: hidden;
+    overflow-x: hidden;
+}
+
+img#one, img#two, img#three, img#four {
+    position: fixed;
+    width: 25rem;
+    height: 25rem;
+}
+
+img#one {
+    top: 0;
+    left: 0;
+}
+
+img#two {
+    bottom: 0;
+    right: 0;
+    transform: rotate(180deg);
+}
+
+section {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+img#login {
+    position: absolute;
+    top: 3rem;
+    right: 3rem;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 10rem;
+    cursor: pointer;
+
+    transition-property: box-shadow;
+    transition-duration: 0.4s;
+}
+
+img#docs {
+    filter: invert(100%);
+    width: 7rem;
+    height: 7rem;
+    position: relative;
+    top: 30%;
+}
+
+div#list {
+    position: relative;
+    top: calc(30% + 10rem);
+}
+
+img.icon {
+    width: 5rem;
+    height: 5rem;
+    border-radius: 10rem;
+    filter: invert(100%);
+    cursor: pointer;
+    margin: 0 1.5rem;
+    transform: rotate(0deg);
+
+    transition-property: box-shadow;
+    transition-duration: 0.4s;
+}
+
+img#summary {
+    background: url('../img/summary.png') no-repeat center;
+    background-size: 2rem 2rem;
+}
+
+img#legacyAPI {
+    background: url('../img/api.png') no-repeat center;
+    background-size: 2rem 2rem;
+}
+
+img#API2 {
+    background: url('../img/api2.png') no-repeat center;
+    background-size: 2rem 2rem;
+}
+
+img#rhino {
+    background: url('../img/rhino.png') no-repeat center;
+    background-size: 2rem 2rem;
+}
+
+img#deepening {
+    background: url('../img/deepening.png') no-repeat center;
+    background-size: 2rem 2rem;
+}
+
+img#appendix {
+    background: url('../img/appendix.png') no-repeat center;
+    background-size: 2rem 2rem;
+}
+
+img#full {
+    background: url('../img/full.png') no-repeat center;
+    background-size: 2rem 2rem;
+}
+
+img#login:hover {
+    box-shadow: 0rem 0rem 0.8rem 0rem #dddddd;
+}
+
+img.icon:hover {
+    box-shadow: 0rem 0rem 0.8rem 0rem rgba(255, 255, 255, 0.164);
 }
