--- a/style/mobile.css
+++ b/style/mobile.css
@@ -45,6 +45,10 @@
     aside dt:hover {
         background-color: #515151;
     }
+
+    div#auto td:hover {
+        background: #dddddd;
+    }
     
     * {
         margin: 0;
@@ -348,5 +352,75 @@
     div.thanks_box {
         display: inline;
         margin-right: 3rem;
+    }
+
+    section#tool {
+        position: fixed;
+        top: 0;
+        right: 0;
+        padding: 5rem 4rem;
+        width: calc(100% - 18rem);
+        height: 100%;
+        overflow: visible;
+        padding-top: 9rem;
+        text-align: center;
+        background: white;
+        display: none;
+    }
+
+    section#tool form {
+        width: 38rem;
+        margin: 0 auto;
+    }
+
+    input {
+        outline: none;
+    }
+
+    input#search_txt {
+        position: relative;
+        top: -0.7rem;
+        height: 2.5rem;
+        width: 35rem;
+        border: none;
+        border-bottom: 0.3rem solid black;
+        font-size: 1.3rem;
+    }
+
+    button#search_btn {
+        background: transparent;
+        border: none;
+    }
+
+    button#search_btn img {
+        filter: invert(100%);
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+
+    div#auto {
+        width: 35rem;
+        text-align: left;
+    }
+
+    div#auto table {
+        border: none;
+        margin-top: -0.7rem;
+        margin-left: 0.1rem;
+        z-index: 999999999999999999999999999999999999999999999999999999999999999999999999999999999999;
+    }
+
+    div#auto tr {
+        background: rgb(252, 251, 251);
+    }
+
+    div#auto td {
+        border: none;
+        transition-property: background;
+        transition-duration: 0.5s;
+    }
+
+    tr#fiv td {
+        border-radius: 0rem 0rem 1.5rem 1.5rem;
     }
 }
