--- a/style/base.css
+++ b/style/base.css
@@ -52,8 +52,8 @@
         background-color: #515151;
     }
 
-    li.auto:hover {
-        background: #6e6e6e;
+    div#auto td:hover {
+        background: #dddddd;
     }
 
     * {
@@ -68,11 +68,8 @@
         height: 100%;
     }
 
-    aside, article#body * {
-        display: inline-block;
-    }
-
     aside {
+        display: inline-block;
         position: fixed;
         background: black;
         color: white;
@@ -128,63 +125,9 @@
         margin-bottom: 1.5rem;
     }
 
-    div#docs_space, div#docs_fun {
-        position: relative;
-        left: 0;
-        width: 8rem;
-    }
-
-    div#docs_fun {
-        top: 26rem;
-    }
-
     img#docs {
         width: 3rem;
         height: 3rem;
-    }
-
-    img#search {
-        width: 2.2rem;
-        height: 2.2rem;
-    }
-
-    div#docs_fun form {
-        position: absolute;
-        top: -1rem;
-        left: 0rem;
-        width: 20rem;
-        display: none;
-    }
-
-    div#autocomplete {
-        width: 23rem;
-        text-align: left;
-        position: absolute;
-        left: 10rem;
-        bottom: 4rem;
-        display: none;
-    }
-
-    li.auto {
-        display: inline;
-        background: #505050;
-        padding: 0.2rem 1rem;
-        border-radius: 10rem;
-        line-height: 3rem;
-        margin-right: 1rem;
-
-        transition-property: background;
-        transition-duration: 0.5s;
-    }
-
-    input#search {
-        width: 100%;
-        height: 3rem;
-        background-color: transparent;
-        border: none;
-        border-bottom: 0.2rem solid white;
-        color: white;
-        outline: none;
     }
 
     img.side_icon {
@@ -390,5 +333,75 @@
     div#imgBox {
         overflow: auto;
         padding-bottom: 2rem;
+    }
+
+    section#tool {
+        position: fixed;
+        top: 0;
+        right: 0;
+        padding: 5rem 4rem;
+        width: calc(100% - 18rem);
+        height: 100%;
+        overflow: visible;
+        padding-top: 9rem;
+        text-align: center;
+        background: white;
+        display: none;
+    }
+
+    section#tool form {
+        width: 38rem;
+        margin: 0 auto;
+    }
+
+    input {
+        outline: none;
+    }
+
+    input#search_txt {
+        position: relative;
+        top: -0.7rem;
+        height: 2.5rem;
+        width: 35rem;
+        border: none;
+        border-bottom: 0.3rem solid black;
+        font-size: 1.3rem;
+    }
+
+    button#search_btn {
+        background: transparent;
+        border: none;
+    }
+
+    button#search_btn img {
+        filter: invert(100%);
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+
+    div#auto {
+        width: 35rem;
+        text-align: left;
+    }
+
+    div#auto table {
+        border: none;
+        margin-top: -0.7rem;
+        margin-left: 0.1rem;
+        z-index: 999999999999999999999999999999999999999999999999999999999999999999999999999999999999;
+    }
+
+    div#auto tr {
+        background: rgb(252, 251, 251);
+    }
+
+    div#auto td {
+        border: none;
+        transition-property: background;
+        transition-duration: 0.5s;
+    }
+
+    tr#fiv td {
+        border-radius: 0rem 0rem 1.5rem 1.5rem;
     }
 }
